--- a/.github/workflows/compliance.yml
+++ b/.github/workflows/compliance.yml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   check_compliance:
-    runs-on: ubuntu-24.04
+    runs-on: self-hosted
     name: Run compliance checks on patch series (PR)
     steps:
     - name: Update PATH for west
