--- a/.github/workflows/twister-hw-board.yml
+++ b/.github/workflows/twister-hw-board.yml
@@ -7,7 +7,13 @@ on:
   push:
     branches:
       - main
-      # TODO: add/remove branches as needed
+      - v*-branch
+      - collab-*
+  pull_request:
+    branches:
+      - main
+      - v*-branch
+      - collab-*
 
 permissions:
   contents: read
